--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,12 +1,10 @@
+@import 'navbar';
+
 /* Box sizing rules */
 *,
 *::before,
 *::after {
     box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
 }
 
 /* Remove default padding */
@@ -41,9 +39,9 @@ body {
     line-height: 1.5;
 }
 
-/* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
-ol[class] {
+/* Remove list styles on ul, ol elements */
+ul,
+ol {
     list-style: none;
 }
 
