--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,7 +3,6 @@ $maxWidth: 1170px;
 .navbar {
     height: 80px;
     color: #5b5b5b;
-    background: #fcfeff;
     overflow: hidden;
     position: fixed;
     width: 100%;
@@ -46,7 +45,7 @@ $maxWidth: 1170px;
                     color: #555;
                 }
                 a.active {
-                    color: blue;
+                    color: #da933f;
                 }
 
                 li:last-of-type a {
