--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -46,11 +46,18 @@ $maxWidth: 1170px;
                     padding-right: 30px;
                 }
                 .image__col {
-                    box-shadow: 0 6px 35px 0 rgba(0, 0, 0, 0.25);
+                    box-shadow: 0 6px 60px 0 rgba(0, 0, 0, 0.25);
                     z-index: 1;
-                    filter: saturate(0.7);
+                    filter: saturate(0.5);
                     img {
                         padding: 10px 0 0 15px;
+                        background: #fff;
+                        background: -webkit-linear-gradient(
+                            to right,
+                            #c9d6ff,
+                            #e2e2e2
+                        );
+                        background: linear-gradient(to left, #ffffff, #f4f2f1);
                     }
                 }
             }
