--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -33,7 +33,7 @@
                 }
 
                 .text__content {
-                    border-right: 1px solid #da933e;
+                    border-right: 1px solid $themeColor;
                     padding-right: 20px;
                 }
             }
