--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -45,7 +45,7 @@ $maxWidth: 1170px;
                     color: #555;
                 }
                 a.active {
-                    color: #da933f;
+                    color: $themeColor;
                 }
 
                 li:last-of-type a {
