--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+$themeColor: #da933f;
+$lightThemeColor: lighten($themeColor, 28%);
+
 @import 'navbar';
 @import 'header';
 @import 'about';
@@ -63,7 +66,7 @@ h1 {
 h2 {
     font-size: 40px;
     line-height: 52px;
-    border-left: 1px solid #da933e;
+    border-left: 1px solid $themeColor;
     padding-left: 20px;
 }
 
@@ -150,7 +153,7 @@ h2 + p {
 }
 
 .text__highlight {
-    color: #da933f;
+    color: $themeColor;
 }
 
 p + p {
