Adding footer component, incl style component

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -50,7 +50,7 @@ $maxWidth: 1170px;
             .header__title {
                 // background: #f5e0c6;
                 background: $lightThemeColor;
-
+                color: #fff;
                 width: 100%;
                 text-align: center;
                 margin-bottom: 5px;
