--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,6 +7,7 @@ $lightThemeColor: lighten($themeColor, 28%);
 @import 'header';
 @import 'about';
 @import 'info';
+@import 'portfolio';
 @import 'footer';
 
 /* Box sizing rules */
@@ -69,6 +70,11 @@ h2 {
     line-height: 52px;
     border-left: 1px solid $themeColor;
     padding-left: 20px;
+}
+
+h3 {
+    font-size: 26px;
+    line-height: 36px;
 }
 
 h5 {
@@ -246,11 +252,16 @@ p + p {
     h1 {
         font-size: 46px;
     }
+
     h2 {
         font-size: 26px;
         line-height: 36px;
         padding-left: 0;
         border: 0 !important;
+    }
+
+    h3 {
+        font-size: 20px;
     }
 
     [class*='col__'] {
