--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -2,7 +2,7 @@
     background: #fff;
 
     &.container__wrapper {
-        padding: 50px 0;
+        padding: 50px 20px;
         display: flex;
         -ms-flex-align: center;
         align-items: center;
