--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -5,8 +5,7 @@ $maxWidth: 1170px;
 
     &.container__wrapper {
         margin: 0 auto;
-        padding: 50px 0;
-
+        padding: 50px 20px;
         display: flex;
         -ms-flex-align: center;
         align-items: center;
@@ -43,6 +42,7 @@ $maxWidth: 1170px;
                     box-shadow: 0 6px 60px 0 rgba(0, 0, 0, 0.25);
                     z-index: 1;
                     filter: saturate(0.5);
+
                     img {
                         padding: 10px 0 0 15px;
                         background: #fff;
