--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -8,7 +8,7 @@
         align-items: center;
         -ms-flex-pack: center;
         justify-content: center;
-        min-height: 100vh;
+        min-height: calc(100vh - 80px);
         position: relative;
 
         .container {
