--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,7 +7,7 @@
         display: flex;
         -ms-flex-align: center;
         justify-content: center;
-        min-height: 100vh;
+        min-height: calc(100vh - 80px);
         position: relative;
 
         .container {
