--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -9,8 +9,12 @@
         align-items: center;
         -ms-flex-pack: center;
         justify-content: center;
-        min-height: 100vh;
+        min-height: calc(100vh - 80px);
         position: relative;
+
+        @media only screen and (min-width: 768px) {
+            padding: 50px 20px 100px;
+        }
 
         .container {
             max-width: 1260px;
@@ -19,23 +23,44 @@
 
             .row {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
 
-                @media only screen and (max-width: 768px) {
-                    flex-direction: column;
-                }
+                // @media only screen and (max-width: 768px) {
+                //     flex-direction: column;
+                // }
 
                 .portfolio__item {
                     margin: 10px;
                     text-align: left;
                     margin: 0 auto;
 
+                    @media only screen and (min-width: 900px) {
+                        max-height: 400px;
+                    }
+
                     .image__container {
                         margin-bottom: 10px;
+                        display: flex;
+
+                        @media only screen and (max-width: 900px) {
+                            flex-direction: column;
+                        }
 
                         .image__container__inner {
                             overflow: hidden;
+                            margin-left: -20px;
+
+                            @media only screen and (max-width: 768px) {
+                                margin-left: 0;
+                            }
                         }
+                    }
+
+                    .portfolio__content {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        width: 100%;
                     }
 
                     .portfolio__btn__container {
@@ -50,9 +75,17 @@
                             margin-right: 2rem;
                             transition: all 0.15s;
 
+                            span {
+                                margin-left: 0rem;
+                                transition: all 0.15s;
+                            }
+
                             &:hover {
-                                color: $lightThemeColor;
-                                border-color: $lightThemeColor;
+                                margin-right: 1.5rem;
+                                border-color: #ffb660;
+                                span {
+                                    margin-left: 0.5rem;
+                                }
                             }
                         }
                     }
